always shows scrollbar to prevent layout shift

--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -95,6 +95,7 @@ body{
     width: 50vw;
     margin: auto;
     font-family: 'Vollkorn';
+    overflow-y: scroll;
 }
 
 header{
